// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar navigation should match snapshot with active link 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: -0.5px;
}

.emotion-1 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-1:last-child {
  margin-bottom: 24px;
}

.emotion-2 {
  margin-bottom: 24px;
}

.emotion-4 {
  display: inline-block;
  transition-property: color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4:hover:not(:disabled) {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-6 {
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 600;
  letter-spacing: -0.5px;
  background-color: transparent;
  color: #0A0A0A;
  box-sizing: border-box;
  cursor: 'pointer';
  min-width: 230px;
  padding: 12px;
  margin: 4px 0;
  text-overflow: ellipsis;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

<nav
    aria-label="Sidebar"
    class="emotion-0"
    role="navigation"
  >
    <ul
      class="emotion-1"
      role="list"
    >
      <li
        class="emotion-2"
      >
        <div
          class="emotion-2"
        >
          <div>
            <a
              class="emotion-4"
              href="/group1/page1"
            >
              <span
                class="emotion-5"
              >
                <div
                  class="emotion-6"
                  data-testid="/group1/page1"
                >
                  Group 1 Page 1
                </div>
              </span>
            </a>
          </div>
        </div>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Sidebar navigation should match snapshot with no active link 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: -0.5px;
}

.emotion-1 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-1:last-child {
  margin-bottom: 24px;
}

<nav
    aria-label="Sidebar"
    class="emotion-0"
    role="navigation"
  >
    <ul
      class="emotion-1"
      role="list"
    />
  </nav>
</DocumentFragment>
`;

exports[`Sidebar navigation should render only routes under current section 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: -0.5px;
}

.emotion-1 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-1:last-child {
  margin-bottom: 24px;
}

.emotion-2 {
  margin-bottom: 24px;
}

.emotion-4 {
  display: inline-block;
  transition-property: color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4:hover:not(:disabled) {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-6 {
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 600;
  letter-spacing: -0.5px;
  background-color: transparent;
  color: #535353;
  box-sizing: border-box;
  cursor: 'pointer';
  min-width: 230px;
  padding: 12px;
  margin: 4px 0;
  text-overflow: ellipsis;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3955357142857143em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3955357142857143em;
}

.emotion-6:hover:not(:disabled) {
  background-color: #E0E7FF;
  border-radius: 8px;
  color: #0A0A0A;
}

.emotion-6:active:not(:disabled) {
  background-color: #AEBFFF;
  border-radius: 8px;
  color: #0A0A0A;
}

<nav
    aria-label="Sidebar"
    class="emotion-0"
    role="navigation"
  >
    <ul
      class="emotion-1"
      role="list"
    >
      <li
        class="emotion-2"
      >
        <div
          class="emotion-2"
        >
          <div>
            <a
              class="emotion-4"
              href="/group1/page1"
            >
              <span
                class="emotion-5"
              >
                <div
                  class="emotion-6"
                  data-testid="/group1/page1"
                >
                  Group 1 Page 1
                </div>
              </span>
            </a>
          </div>
        </div>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;
